<resources>
    <string name="app_name">MovieProject</string>
    <string name="search">Search</string>
    <string name="enter_query">Enter Query</string>
    <string name="your_rating">Your Rating</string>
    <string name="rating_imdb">IMDB rating</string>
    <string name="watched">Watched</string>
    <string name="to_watch">To Watch</string>
    <string name="plot_info">Plot Info</string>
    <string name="plot">Plot</string>
    <string name="year">year</string>
    <string name="title">title</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="temp">temp</string>
    <string name="search_movie">Search Movie</string>
    <string name="welcome">Welcome</string>
    <string name="genres">Genres</string>
    <string name="metascore_rating">Metascore rating</string>
    <string name="genres_info">Genres Info</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="login">Login</string>
    <string name="my_watched_movies">My Watched Movies</string>
    <string name="sign_up">Sign up</string>
    <string name="plan_to_watch">Plan to Watch</string>
    <string name="profile_picture">profile_picture</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Username:</string>
    <string name="email_query">Enter email</string>
    <string name="pwd_query">Enter password</string>
    <string name="repeat_pwd_query">Repeat password</string>
    <string name="username_query">Enter username</string>
</resources>