<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_poster"
        android:layout_width="128dp"
        android:layout_height="188dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"

        android:contentDescription="@string/movie_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_title_movie"
        android:layout_width="194dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        android:gravity="start|center"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_year_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_plot_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/plot"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_poster" />

    <TextView
        android:id="@+id/tv_plot_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/plot_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_plot_title" />

    <Button
        android:id="@+id/b_toWatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/to_watch"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_movie" />

    <Button
        android:id="@+id/b_watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/watched"
        app:layout_constraintStart_toEndOf="@+id/b_toWatch"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_movie" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/rating"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_your_rating" />

    <TextView
        android:id="@+id/tv_your_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/your_rating"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toBottomOf="@+id/b_toWatch" />
</androidx.constraintlayout.widget.ConstraintLayout>