<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/image_poster"
        android:layout_width="128dp"
        android:layout_height="188dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"

        android:contentDescription="@string/movie_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_title_movie"
        android:layout_width="180sp"
        android:layout_height="50sp"
        android:layout_marginStart="8sp"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="8sp"
        android:gravity="start|center"
        android:maxWidth="210sp"
        android:textColor="@color/black"
        android:textSize="@dimen/movieTitles"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_year_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_plot_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/bound"
        android:layout_marginLeft="@dimen/bound"
        android:layout_marginTop="16dp"
        android:text="@string/plot"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_poster" />

    <TextView
        android:id="@+id/tv_plot_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_plot_title" />

    <Button
        android:id="@+id/b_toWatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/to_watch"
        app:layout_constraintEnd_toStartOf="@id/b_watched"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_movie" />

    <Button
        android:id="@+id/b_watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/watched"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b_toWatch"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_movie" />

    <TextView
        android:id="@+id/tv_rating_imdb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/rating_imdb"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_your_rating" />

    <TextView
        android:id="@+id/tv_your_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/your_rating"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toBottomOf="@+id/b_toWatch" />

    <TextView
        android:id="@+id/tv_rating_metascore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/metascore_rating"
        app:layout_constraintStart_toEndOf="@+id/tv_rating_imdb"
        app:layout_constraintTop_toBottomOf="@+id/tv_your_rating" />

    <TextView
        android:id="@+id/tv_genres_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_genres" />

    <TextView
        android:id="@+id/tv_genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/bound"
        android:layout_marginLeft="@dimen/bound"
        android:layout_marginTop="8dp"
        android:text="@string/genres"
        android:textColor="#000000"
        android:textSize="@dimen/movieTitles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_plot_info" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/watched"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <TextView
        android:id="@+id/tv_metascore_score"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/tv_rating_metascore"
        app:layout_constraintTop_toBottomOf="@+id/tv_your_rating" />
</androidx.constraintlayout.widget.ConstraintLayout>