<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity" >

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_query"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/loginTextView"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/loginTextView"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

    <EditText
        android:id="@+id/pwdLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pwd_query"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/loginEmail"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/pwdLogin"
        app:layout_constraintStart_toStartOf="@+id/pwdLogin"
        app:layout_constraintTop_toBottomOf="@+id/pwdLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>