<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SearchActivity">

    <EditText
        android:id="@+id/et_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/bound"
        android:layout_marginLeft="@dimen/bound"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_query"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_query" />

    <ListView
        android:id="@+id/lv_results"
        android:layout_width="381dp"
        android:layout_height="522dp"
        android:layout_marginStart="@dimen/bound"
        android:layout_marginLeft="@dimen/bound"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_search" />

    <Spinner
        android:id="@+id/spinner_type"
        android:layout_width="110dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_query"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_previous"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/bound"
        android:layout_marginLeft="@dimen/bound"
        android:layout_marginBottom="@dimen/bound"
        android:background="@drawable/button_round"
        android:clickable="true"
        android:contentDescription="@string/previous"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        android:focusable="true" />

    <ImageButton
        android:id="@+id/ib_next"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/bound"
        android:layout_marginRight="@dimen/bound"
        android:layout_marginBottom="@dimen/bound"
        android:background="@drawable/button_round"
        android:clickable="true"
        android:contentDescription="@string/next"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_24"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>